# temp

src/: CMakeLists.txt  COMPILE FOR WIN 64  client.c  client_mgmt.c  client_mgmt.h  common.h  protocolhandler.c  protocolhandler.h  save  server.c  to learn + dev notes.txt  websocket.c  websocket.h
